other/require-replicas-allow-disruption/.chainsaw-test/existing-pdbs.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: pdb01
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: busybox
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: pdb02
spec:
  minAvailable: 2
  selector:
    matchLabels:
      app: busybox
