other/require-replicas-allow-disruption/.chainsaw-test/good-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-busybox
  labels:
    app: busybox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.36
        name: busybox
        command: ["sleep", "infinity"]
