other/require-replicas-allow-disruption/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-replicas-allow-disruption
status:
  ready: true
