other/require-replicas-allow-disruption/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-replicas-allow-disruption
spec:
  steps:
  - name: 01 - Create policy and set to Enforce
    try:
    - apply:
        file: ../require-replicas-allow-disruption.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-replicas-allow-disruption
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Create existing PDBs in cluster
    try:
    - apply:
        file: existing-pdbs.yaml
  - name: 03 - Create good Deployment
    try:
    - apply:
        file: good-deploy.yaml
  - name: 04 - Create bad Deployment
    try:
    - apply:
        file: bad-deploy.yaml
        expect:
        - check:
            ($error != null): true
